--- a/TalentShow/app/src/main/res/layout/fragment_profile_bottom_sheet.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_profile_bottom_sheet.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="250dp"
-    android:background="#14ffffff"
+    android:layout_height="200dp"
+
     tools:context=".presentation.main.BottomSheetFragments.ProfileBottomSheet">
 
     <TextView
@@ -18,10 +18,21 @@
         android:text="Редактировать профиль"
         android:textColor="@color/whiteText"
         android:textSize="20sp"
-        android:background="@drawable/bottom_sheet_profile_item_bg"
+        android:background="@drawable/bottom_sheet_profile_bg_up"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:background="@drawable/bottom_sheet_profile_line"
+        app:layout_constraintTop_toBottomOf="@id/profile_bottom_sheet_edit"
+        app:layout_constraintEnd_toEndOf="@id/profile_bottom_sheet_edit"
+        app:layout_constraintStart_toStartOf="@id/profile_bottom_sheet_edit"
+        android:elevation="10dp"
+        />
+
 
     <TextView
         android:id="@+id/profile_bottom_sheet_settings"
@@ -29,12 +40,12 @@
         android:layout_height="57dp"
         android:layout_marginStart="26dp"
         android:layout_marginEnd="26dp"
-        android:layout_marginTop="16dp"
+
         android:gravity="center"
         android:text="Открыть настройки"
         android:textColor="@color/whiteText"
         android:textSize="20sp"
-        android:background="@drawable/bottom_sheet_profile_item_bg"
+        android:background="@drawable/bottom_sheet_profile_bg_down"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/profile_bottom_sheet_edit" />
@@ -45,7 +56,7 @@
         android:layout_height="57dp"
         android:layout_marginStart="26dp"
         android:layout_marginEnd="26dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="10dp"
         android:gravity="center"
         android:text="Отмена"
         android:textColor="@color/whiteText"
