--- a/TalentShow/app/src/main/res/values/styles.xml
+++ b/TalentShow/app/src/main/res/values/styles.xml
@@ -255,7 +255,13 @@
 
     </style>
 
+    <style name="CustomBottomSheetDialogTheme" parent="Theme.Design.Light.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/CustomBottomSheetStyle</item>
+    </style>
 
+    <style name="CustomBottomSheetStyle" parent="Widget.Design.BottomSheet.Modal">
+        <item name="android:background">@color/none_color</item>
+    </style>
 
 
 
