--- a/TalentShow/app/src/main/res/layout/fragment_profile_bottom_sheet.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_profile_bottom_sheet.xml
@@ -1,70 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
+    android:id="@+id/fragment_history_menu_bottom"
     android:layout_width="match_parent"
-    android:layout_height="220dp"
-
-    tools:context=".presentation.main.BottomSheetFragments.ProfileBottomSheet">
-
-    <TextView
+    android:layout_height="180dp"
+    android:orientation="vertical"
+    android:background="@color/lightDark"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <LinearLayout
         android:id="@+id/profile_bottom_sheet_edit"
-        android:layout_width="wrap_content"
-        android:layout_height="57dp"
-        android:layout_marginStart="26dp"
-        android:layout_marginEnd="26dp"
-        android:layout_marginTop="16dp"
-        android:gravity="center"
-        android:text="Редактировать профиль"
-        android:textColor="@color/whiteText"
-        android:textSize="20sp"
-        android:background="@drawable/bottom_sheet_profile_bg_up"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:background="@drawable/bottom_sheet_profile_line"
-        app:layout_constraintTop_toBottomOf="@id/profile_bottom_sheet_edit"
-        app:layout_constraintEnd_toEndOf="@id/profile_bottom_sheet_edit"
-        app:layout_constraintStart_toStartOf="@id/profile_bottom_sheet_edit"
-        android:elevation="10dp"
-        />
-
-
-    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:orientation="horizontal"
+        android:padding="16dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="16dp"
+            android:textColor="@color/whiteText"
+            android:text="@string/edit_profile"/>
+    </LinearLayout>
+    <LinearLayout
         android:id="@+id/profile_bottom_sheet_settings"
-        android:layout_width="wrap_content"
-        android:layout_height="57dp"
-        android:layout_marginStart="26dp"
-        android:layout_marginEnd="26dp"
-
-        android:gravity="center"
-        android:text="Открыть настройки"
-        android:textColor="@color/whiteText"
-        android:textSize="20sp"
-        android:background="@drawable/bottom_sheet_profile_bg_down"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/profile_bottom_sheet_edit" />
-
-    <TextView
-        android:id="@+id/profile_bottom_sheet_cancel"
-        android:layout_width="wrap_content"
-        android:layout_height="57dp"
-        android:layout_marginStart="26dp"
-        android:layout_marginEnd="26dp"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
-        android:text="Отмена"
-        android:textStyle="bold"
-        android:textColor="@color/whiteText"
-        android:textSize="20sp"
-        android:background="@drawable/bottom_sheet_profile_item_bg"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/profile_bottom_sheet_settings" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:orientation="horizontal"
+        android:padding="16dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="@color/whiteText"
+            android:layout_marginStart="16dp"
+            android:text="@string/open_settings"/>
+    </LinearLayout>
+</LinearLayout>
