--- a/TalentShow/app/src/main/res/layout/casting_swipe_in_msg_view.xml
+++ b/TalentShow/app/src/main/res/layout/casting_swipe_in_msg_view.xml
@@ -4,12 +4,9 @@
     android:orientation="vertical"
     android:layout_width="350dp"
     android:layout_height="425dp">
-    <TextView
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="32sp"
-        android:textStyle="bold"
-        android:layout_margin="40dp"
-        android:textColor="@android:color/holo_green_light"
-        android:text="Like"/>
+        android:src="@drawable/like_swipe_ic"
+        android:layout_margin="50dp" />
 </LinearLayout>
