--- a/TalentShow/app/src/main/res/layout/casting_swipe_out_msg_view.xml
+++ b/TalentShow/app/src/main/res/layout/casting_swipe_out_msg_view.xml
@@ -5,12 +5,9 @@
     android:layout_width="350dp"
     android:gravity="right"
     android:layout_height="425dp">
-    <TextView
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="32sp"
-        android:textStyle="bold"
-        android:layout_margin="40dp"
-        android:textColor="@android:color/holo_red_light"
-        android:text="Dislike"/>
+        android:src="@drawable/dislike_swipe_ic"
+        android:layout_margin="50dp" />
 </LinearLayout>
