--- a/TalentShow/app/src/main/res/layout/fragment_public_profile.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_public_profile.xml
@@ -105,8 +105,7 @@
             android:id="@+id/fragment_public_profile_container1"
             app:layout_constraintTop_toBottomOf="@id/fragment_public_profile_video_tv"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/fragment_public_profile_container2"
-            app:layout_constraintBottom_toTopOf="@id/fragment_public_profile_container3">
+            app:layout_constraintEnd_toStartOf="@id/fragment_public_profile_container2">
 
             <ImageView
                 android:id="@+id/fragment_public_profile_video_1"
@@ -128,7 +127,6 @@
             android:id="@+id/fragment_public_profile_container2"
             app:layout_constraintTop_toBottomOf="@id/fragment_public_profile_video_tv"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/fragment_public_profile_container4"
             app:layout_constraintStart_toEndOf="@+id/fragment_public_profile_container1">
 
             <ImageView
@@ -144,11 +142,12 @@
             android:layout_width="0dp"
             android:layout_height="100dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="11dp"
             android:layout_marginBottom="11dp"
             android:visibility="invisible"
             android:id="@+id/fragment_public_profile_container3"
             app:cardCornerRadius="9dp"
+            app:layout_constraintVertical_bias="0.0"
             app:layout_constraintTop_toBottomOf="@id/fragment_public_profile_container1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -167,12 +166,13 @@
             android:layout_width="0dp"
             android:layout_height="100dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="11dp"
             android:layout_marginStart="11dp"
             android:layout_marginBottom="11dp"
             android:visibility="invisible"
             android:id="@+id/fragment_public_profile_container4"
             app:cardCornerRadius="9dp"
+            app:layout_constraintVertical_bias="0.0"
             app:layout_constraintTop_toBottomOf="@id/fragment_public_profile_container2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/fragment_public_profile_container3"
