--- a/TalentShow/app/src/main/res/layout/fragment_rating.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_rating.xml
@@ -1,92 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/darkBackground"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-
-
-    <ProgressBar
-        android:id="@+id/fragment_rating_progressbar"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="15dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        />
-
-
-
-    <androidx.core.widget.NestedScrollView
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/main.appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:fitsSystemWindows="true"
         >
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/main.collapsing"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            android:fitsSystemWindows="true"
+            app:contentScrim="?attr/colorPrimary"
+            app:expandedTitleMarginStart="10dp"
+            app:expandedTitleMarginEnd="64dp"
+            app:expandedTitleGravity="bottom"
+            app:expandedTitleMarginBottom="10dp"
+
             >
 
-            <TextView
-                android:id="@+id/fragment_casting_text_semi"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@string/xce_factor_semifinalists"
-                android:textSize="20sp"
-                android:textColor="@color/whiteText"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="17dp"
-                android:layout_marginEnd="16dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                />
-
-            <TextView
-                android:id="@+id/fragment_casting_text1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@string/top_20"
-                android:textSize="20sp"
-                android:textColor="@color/whiteText"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="17dp"
-                android:layout_marginEnd="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/rating_recycler_semifinalists"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                />
-
-            <TextView
-                android:id="@+id/rating_no_semifinalists"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="В этом разделе появятся полуфиналисты"
-                android:textSize="16sp"
-                android:gravity="center"
-                android:textColor="@color/whiteText"
-                android:paddingStart="5dp"
-                android:paddingEnd="5dp"
-                android:paddingBottom="5dp"
-                android:paddingTop="13dp"
-                app:layout_constraintTop_toBottomOf="@+id/fragment_casting_text_semi"
-                app:layout_constraintBottom_toTopOf="@id/fragment_casting_text1"
+                android:layout_height="match_parent"
+                >
+
+                <ProgressBar
+                    android:id="@+id/fragment_rating_progressbar"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="15dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    />
+
+                <TextView
+                    android:id="@+id/fragment_casting_text_semi"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/xce_factor_semifinalists"
+                    android:textSize="20sp"
+                    android:textColor="@color/whiteText"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="17dp"
+                    android:layout_marginEnd="16dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    />
+
+                <TextView
+                    android:id="@+id/fragment_casting_text1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="20sp"
+                    android:textColor="@color/whiteText"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="17dp"
+                    android:layout_marginEnd="16dp"
+                    app:layout_constraintTop_toBottomOf="@+id/rating_recycler_semifinalists"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    />
+
+                <TextView
+                    android:id="@+id/rating_no_semifinalists"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="В этом разделе появятся полуфиналисты"
+                    android:textSize="16sp"
+                    android:gravity="center"
+                    android:textColor="@color/whiteText"
+                    android:paddingStart="5dp"
+                    android:paddingEnd="5dp"
+                    android:paddingBottom="5dp"
+                    android:paddingTop="13dp"
+                    app:layout_constraintTop_toBottomOf="@+id/fragment_casting_text_semi"
+                    app:layout_constraintBottom_toTopOf="@id/fragment_casting_text1"
+                    />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rating_recycler_semifinalists"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="5dp"
+                    android:paddingEnd="5dp"
+                    android:paddingBottom="5dp"
+                    android:paddingTop="13dp"
+                    app:layout_constraintTop_toBottomOf="@+id/fragment_casting_text_semi"/>
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/main.toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                app:layout_collapseMode="pin"
+                app:title="@string/top_20"
+                app:titleMarginStart="10dp"
+                app:titleMarginBottom="10dp"
                 />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rating_recycler_semifinalists"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingStart="5dp"
-                android:paddingEnd="5dp"
-                android:paddingBottom="5dp"
-                android:paddingTop="13dp"
-                app:layout_constraintTop_toBottomOf="@+id/fragment_casting_text_semi"/>
+
+
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+
+
+
+
+
+
+
+
+
+
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rating_recycler"
@@ -96,13 +141,15 @@
                 android:paddingEnd="5dp"
                 android:paddingBottom="5dp"
                 android:paddingTop="13dp"
-                app:layout_constraintTop_toBottomOf="@id/fragment_casting_text1"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                />
 
 
 
-    </androidx.core.widget.NestedScrollView>
 
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
