--- a/TalentShow/app/src/main/res/layout/casting_card_view.xml
+++ b/TalentShow/app/src/main/res/layout/casting_card_view.xml
@@ -2,19 +2,18 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:background="@drawable/card_back"
+    android:layout_margin="8dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/activity_casting_card"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="17dp"
-        android:layout_marginEnd="17dp"
-        android:layout_marginBottom="18dp"
-        app:cardCornerRadius="25dp"
+        android:layout_margin="0.1dp"
+        app:cardCornerRadius="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -38,13 +37,13 @@
                 app:resize_mode="zoom"/>
 
 
-
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:elevation="20dp"
-                android:background="@drawable/casting_top_gradient"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:background="@drawable/casting_top_gradient">
 
                 <ImageView
                     android:id="@+id/casting_activity_avatar"
@@ -52,27 +51,24 @@
                     android:layout_height="30dp"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="19dp"
-                    android:layout_marginEnd="293dp"
+                    android:layout_marginEnd="300dp"
                     android:layout_marginBottom="15dp"
                     android:elevation="20dp"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
-                
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
                 <ImageView
                     android:id="@+id/activity_casting_share_btn"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/share_btn"
-                    android:layout_marginTop="19dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginBottom="15dp"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
                     android:elevation="20dp"
+                    android:src="@drawable/share_btn"
+                    android:layout_marginEnd="16dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/casting_activity_avatar"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    />
+                    app:layout_constraintTop_toTopOf="@+id/casting_activity_avatar" />
 
                 <TextView
                     android:id="@+id/activity_casting_name"
@@ -80,14 +76,16 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="19dp"
-                    android:layout_marginEnd="20dp"
+                    android:layout_marginEnd="19dp"
+                    android:maxLines="2"
+                    android:ellipsize="end"
                     android:gravity="center_vertical"
                     android:lineSpacingExtra="1sp"
                     android:text="@string/activity_casting_name"
-                    android:textSize="20sp"
                     android:textColor="@color/whiteText"
+                    android:textSize="20sp"
+                    app:layout_constraintEnd_toStartOf="@id/activity_casting_share_btn"
                     app:layout_constraintStart_toEndOf="@id/casting_activity_avatar"
-                    app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -97,6 +95,8 @@
                 android:elevation="20dp"
                 android:background="@drawable/casting_bottom_gradient"
                 app:layout_constraintBottom_toBottomOf="parent">
+
+
                 <TextView
                     android:id="@+id/activity_casting_description"
                     android:layout_width="0dp"
