--- a/TalentShow/app/src/main/res/layout/fragment_casting.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_casting.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
-        android:textColor="@color/whiteText"
+        android:textColor="@color/darkGrayText"
         android:textSize="18sp"
         android:text="@string/no_more_videos"
         android:gravity="center"
@@ -27,9 +27,9 @@
 
     <View
         android:id="@+id/activity_casting_btn_x"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:background="@drawable/activity_casting_btn_x"
+        android:layout_width="37dp"
+        android:layout_height="37dp"
+        android:background="@drawable/activity_casting_dislike"
         android:layout_marginStart="68dp"
         android:layout_marginBottom="28dp"
         android:layout_marginEnd="138dp"
@@ -44,7 +44,7 @@
         android:id="@+id/activity_casting_btn_like"
         android:layout_width="43dp"
         android:layout_height="40dp"
-        android:background="@drawable/activity_casting_btn_like"
+        android:background="@drawable/activity_casting_like"
         android:layout_marginEnd="68dp"
         android:layout_marginBottom="28dp"
         android:elevation="10dp"
