--- a/TalentShow/app/src/main/res/values/colors.xml
+++ b/TalentShow/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#141516</color>
     <color name="colorPrimaryDark">#141516</color>
-    <color name="colorAccent">#661987</color>
+    <color name="colorAccent">#D11AE5</color>
     <color name="darkBackground">#141516</color>
     <color name="whiteText">#FFFFFF</color>
     <color name="whiteEditableText">#F1F1F1</color>
@@ -20,7 +20,7 @@
     <color name="greyText">#ABABAB</color>
     <color name="hintTextColor">#000000</color>
     <color name="none_color">#00000000</color>
-    <color name="pink">#C710D6</color>
+    <color name="pink">#D11AE5</color>
     <color name="darkPink">#AA3DFB</color>
 
 
